--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <title>Max's Portfolio</title>
   <meta class="viewport" name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-  <script src="main.js"></script>
+  <!-- <script src="main.js"></script> -->
+  <link rel="stylesheet" type="text/css" media="screen" href="swpeople.css">
+  <script src="swpeople.js" type="module"></script>
 </head>
 <body>
   <div id="welcome-section" class="intro">
@@ -62,6 +64,14 @@
  <a href="https://twitter.com/freecodecamp" target="_blank" class="contact-details">GitHub</a>
  <a href="mailto:example@example.com" class="contact-details">GitHub</a>
  <a href="tel:555-555-5555" class="contact-details">GitHub</a>
+ <div class='names'>
+  
+  <div class='man-holder'>
+      <h3>ALL THE MEN!</h3>
+  </div>
+  
+  <div class='woman-holder'><h3>ALL THE WOMEN!</h3></div>
+ </div>
 </div>
 </body>
 <footer>
