changed to mass

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
  <a href="tel:555-555-5555" class="contact-details">GitHub</a>
  <div class='names'>
   
-  <div class='man-holder'>
-    <h3>ALL THE MEN!</h3>
+  <div class='fatPplContainer'>
+    <h3>Fat People</h3>
   </div>
   
-  <div class='woman-holder'><h3>ALL THE WOMEN!</h3></div>
+  <div class='skinnyPplContainer'><h3>Less Fat People</h3></div>
  </div>
 </div>
 </body>
