changed html title

--- a/PokemonCards.html
+++ b/PokemonCards.html
@@ -11,6 +11,8 @@
 <body>
     <div class="pokemon-container">
 
+        </div>
+
     </div>
     <script src="/pokecards.js" type="module"></script>
 </body>
