--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div id="welcome-section" class="intro">
 
-        <h1>Hey i'am Max.</h1>
+        <h1>Hey I am Max.</h1>
         
         <p>a web developer</p>
         <div id="projects" class="work">
