styled and animation added

--- a/PokemonCards.html
+++ b/PokemonCards.html
@@ -12,8 +12,9 @@
     <div class="pokemon-container">
 
         </div>
-
+        <button id="maxemon" >Create a new Maxemon</button>
     </div>
     <script src="/pokecards.js" type="module"></script>
+    
 </body>
 </html>
