--- a/PokemonCards.html
+++ b/PokemonCards.html
@@ -9,12 +9,19 @@
     <link rel="stylesheet" type="text/css" media="screen" href="/pokemon.css">
 </head>
 <body>
+        <body>
+                <header>
+                    <h2>Pokemon Cards</h2>
+                </header>
+                <main>
+    <main>
     <div class="pokemon-container">
 
         </div>
+        
         <button id="maxemon" >Create a new Maxemon</button>
-    </div>
-    <script src="/pokecards.js" type="module"></script>
-    
-</body>
-</html>
+              </div>
+    </main>
+        <script src="/pokeCards.js" type="module"></script>
+    </body>
+    </html>
