new layout idea

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
         <p>a web developer</p>
         <div id="projects" class="work">
-            <h2 class="work-header">These are some of my projects..</h2>
+            <h2 class="work-header">These are some of my projects..Put finished projects here.</h2>
             <a href="https://www.youtube.com/watch?v=CMNry4PE93Y" target="_blank" class="project project-tile">
               <img class="project-pic" src="https://cdn4.iconfinder.com/data/icons/glyphlibrary-one/100/rocket2-512.png" alt="project">
               <div class="project-title">Rocket Ship</div>
