Changed to a Pokemon picture

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
               <img class="project-pic" src="https://cdn4.iconfinder.com/data/icons/glyphlibrary-one/100/rocket2-512.png" alt="project">
               <div class="project-title">Rocket Ship</div>
             </a>
-            <a href="https://codepen.io/FreeCodeCamp/pen/ONjoLe" target="_blank" class="project project-tile">
-              <img class="project-pic" src="http://www.stickpng.com/assets/images/588a668cd06f6719692a2d1b.png" alt="project">
-              <div class="project-title">Home</div>
+            <a href="/PokemonCards.html" target="_blank" class="project project-tile">
+              <img class="project-pic" src="http://pngimg.com/uploads/pokemon/pokemon_PNG33.png" alt="project">
+              <div class="project-title">Pokemon</div>
             </a>
-            <a href="https://codepen.io/FreeCodeCamp/pen/PNKdjo" target="_blank" class="project project-tile">
+            <a href="/StarWars.html" target="_blank" class="project project-tile">
               <img class="project-pic" src="https://www.freeiconspng.com/uploads/disk-floopy-save-icon--27.png" alt="project">
               <div class="project-title">Save</div>
             </a>
