--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
               <div class="project-title">Pokemon</div>
             </a>
             <a href="/StarWars.html" target="_blank" class="project project-tile">
-              <img class="project-pic" src="https://www.freeiconspng.com/uploads/disk-floopy-save-icon--27.png" alt="project">
-              <div class="project-title">Save</div>
+              <img class="project-pic" src="https://vignette.wikia.nocookie.net/starwars/images/d/d2/Jar_Jar_aotc.jpg/revision/latest?cb=20080303052132" alt="project">
+              <div class="project-title">StarWars</div>
             </a>
             <a href="https://codepen.io/FreeCodeCamp/pen/mVEJag" target="_blank" class="project project-tile">
               <img class="project-pic" src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Windows_Settings_app_icon.png" alt="project">
@@ -62,7 +62,7 @@
     </div>
  <a id='profile-link' href="https://github.com/freecodecamp" target="_blank" class="contact-details">GitHub</a>
  <a href="https://twitter.com/freecodecamp" target="_blank" class="contact-details">GitHub</a>
- <a href="/PokemonCards.html" class="contact-details">Pokemon</a>
+ <a href="/PokemonCards.html" class="contact-details">GitHub</a>
  <a href="tel:555-555-5555" class="contact-details">GitHub</a>
  <div class='names'>
   
