--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
  <a id='profile-link' href="https://github.com/freecodecamp" target="_blank" class="contact-details">GitHub</a>
  <a href="https://twitter.com/freecodecamp" target="_blank" class="contact-details">GitHub</a>
- <a href="/PokemonCards.html" class="contact-details">GitHub</a>
+ <a href="" class="contact-details">Instagram</a>
  <a href="tel:555-555-5555" class="contact-details">GitHub</a>
  <div class='names'>
   
