fixed starwars html and added background image on poke

--- a/StarWars.html
+++ b/StarWars.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <nav>
-        <ul id='navbar'>
-          <li><a href="#welcome-section">About</a></li>
-          <li><a href="#projects">Work</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="header">
+  <head> 
+      <script src="swpeople.js" type="module"></script>
+      <link rel="stylesheet" type="text/css" media="screen" href="swpeople.css">
+      <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+      
+  </head>
+  <body>
+    <div class="names">
+      <div class="fatPplContainer">
+        <h3>Fat People</h3>
+      </div>
+
+      <div class="skinnyPplContainer"><h3>Less Fat People</h3></div>
     </div>
- <a id='profile-link' href="https://github.com/freecodecamp" target="_blank" class="contact-details">GitHub</a>
- <a href="https://twitter.com/freecodecamp" target="_blank" class="contact-details">GitHub</a>
- <a href="/PokemonCards.html" class="contact-details">Pokemon</a>
- <a href="tel:555-555-5555" class="contact-details">GitHub</a>
- <div class='names'>
-  
-  <div class='fatPplContainer'>
-    <h3>Fat People</h3>
-  </div>
-  
-  <div class='skinnyPplContainer'><h3>Less Fat People</h3></div>
- </div>
-</div>
-      </html>
+  </body>
+</html>
