--- a/index.html
+++ b/index.html
@@ -66,7 +66,19 @@
  <a href="tel:555-555-5555" class="contact-details">GitHub</a>
   
 </body>
-<footer>
-  <p> thank you</p>
-</footer>
+<style>
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #6C5B7B;
+    color: white;
+    text-align: center;
+  }
+  </style>
+  
+  <div class="footer">
+    <p>Footer</p>
+  </div>
 </html>
