changed a few indexhtml things

--- a/PokemonCards.html
+++ b/PokemonCards.html
@@ -19,7 +19,7 @@
 
         </div>
         
-        <button id="maxemon" >Create a new</button>
+        <button id="maxemon" >Create a new Pokemon</button>
               </div>
     </main>
         <script src="/pokeCards.js" type="module"></script>
