--- a/html/PokemonCards.html
+++ b/html/PokemonCards.html
@@ -6,7 +6,7 @@
     <title>Pokemon Cards</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/pokemon.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/pokemon.css">
 </head>
 <body>
         <body>
@@ -22,6 +22,6 @@
         <button id="maxemon" >Create a new Pokemon</button>
               </div>
     </main>
-        <script src="/pokeCards.js" type="module"></script>
+        <script src="../js/pokeCards.js" type="module"></script>
     </body>
     </html>
