--- a/html/index.html
+++ b/html/index.html
@@ -20,11 +20,11 @@
 <body>
   <div id="welcome-section" class="intro">
 
-        <h1>Hey I am Max.</h1>
+        <h1>Hey I'm Max.</h1>
         
         <p>a web developer</p>
         <div id="projects" class="work">
-            <h2 class="work-header">These are some of my projects..Put finished projects here.</h2>
+            <h2 class="work-header">These are some of my projects.</h2>
             <a href="../html/PokemonCards.html" target="_blank" class="project project-tile">
               <img class="project-pic" src="http://pngimg.com/uploads/pokemon/pokemon_PNG33.png" alt="project">
               <div class="project-title">Pokemon</div>
